# screenloupe

./: .cursorrules  .gitignore  ARCHITECTURE.md  CLAUDE.md  KARPATHY.md  README.md  ScreenLoupe.spec  app.py  build.ps1  installer.iss  pyproject.toml
docs/: 01-product-spec.md  02-technical-design.md  03-ui-ux-design.md  04-implementation-plan.md  05-cursor-kickoff-prompt.md  index.html
installer/: screenloupe.iss
screenloupe/: __init__.py  __main__.py  cli.py  config.py  gui.py  loupe.py  process.py  startup.py  trigger.py
scripts/: build.ps1  dev_capture_preview.py  dev_selector.py  diag_hotkeys.py  generate_assets.py
scripts/spikes/: spike_a_capture_exclusion.py  spike_b_click_through.py  spike_c_capture_perf.py
src/screenloupe/: __init__.py  __main__.py  app.py  main.py
src/screenloupe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/screenloupe/capture/: __init__.py  engine.py  exclusion.py  monitor.py
src/screenloupe/core/: __init__.py  config.py  constants.py  state.py
src/screenloupe/hotkeys/: __init__.py  manager.py
src/screenloupe/overlay/: __init__.py  lens.py  magnifier.py  selector.py  win32_window.py
src/screenloupe/platformwin/: __init__.py  cursor.py  dpi.py  single_instance.py  startup.py
src/screenloupe/ui/: __init__.py  icons.py  theme.py  tray.py
src/screenloupe/ui/settings/: __init__.py  window.py
src/screenloupe/ui/settings/pages/: __init__.py  about.py  general.py  lens.py  magnifier.py  shortcuts.py
src/screenloupe/ui/settings/widgets/: __init__.py  hotkey_recorder.py  labeled_slider.py  preview_tile.py
tests/: test_capture_engine.py  test_config.py  test_dpi.py  test_fit_geometry.py  test_lens_geometry.py  test_selector.py  test_state.py
