# ScreenLoupe — project metadata & tooling
# Phase 0 deliverable. src layout; install with: pip install -e ".[dev]"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "screenloupe"
version = "0.1.0"
description = "A rectangular magnifying glass for your Windows screen — live, click-through, easy on the eyes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["magnifier", "accessibility", "overlay", "windows", "screen"]
dependencies = [
    "PyQt6>=6.6",
    "mss>=9.0",
    "keyboard>=0.13.5",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]

[project.gui-scripts]
screenloupe = "screenloupe.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# B008: Qt patterns (default-arg signals) occasionally trip this; disable only if it fires.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
